--- a/css/master.css
+++ b/css/master.css
@@ -223,50 +223,44 @@ nav.scroll {
 
 
 /* ---------- BLOG ---------- */
-
-aside {
-    border-top: 1px solid #222222;
-}
-
 .blogpost {
-    width: 90%;
-    margin-left: 5%;
-    margin-bottom: 150px;
+    width: 100%;
+    margin-bottom: 8em;
 }
 
-p.date {
-    margin: 20px 0;
+.blogpost:last-child {
+    margin-bottom: 4em;
+}
+
+p.blog-date {
+    margin-top: 2em;
     font-style: italic;
     color: #990000;
     text-align: center;
 }
 
+h2.blog-title {
+    margin-top: 0.3em;
+}
+
 .blogpost img {
     max-width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 2em;
     text-align: center;
     box-shadow: 0px 1px 5px 0px #4a4a4a;
-    -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
-    -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
 }
 
-.content {
-    margin-bottom: 35px;
-    text-align: left;
+.blogpost .content p {
+    margin-bottom: 1em;
 }
 
-.content p {
-    margin-bottom: 20px;
-}
-
-.content .lastline {
-    margin-bottom: 50px;
+.blogpost a {
+    display: inline-block;
 }
 
 .blogpost a:link, .blogpost a:visited {
-    padding: 15px;
+    padding: 0.8em;
     font-family: 'font1';
-    font-size: 17px;
     font-weight: bold;
     color: #ffffff;
     text-decoration: none;
@@ -279,7 +273,14 @@ p.date {
     text-decoration: none;
 }
 
+aside {
+    padding-bottom: 2em;
+    border-top: 1px solid #222222;
+}
 
+aside .posts-of-year {
+    text-align: center;
+}
 
 
 
