--- a/css/master.css
+++ b/css/master.css
@@ -335,12 +335,13 @@ span.gallery-title {
 /* ---------- GALLERY SECTION PAGES ---------- */
 article.galleries {
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 figure {
 	width: 100%;
-	float: left;
-
 }
 
 figure img {
@@ -400,21 +401,24 @@ label, input {
 
 
 	/* GALLERY */
-    #three {
-        padding-top: 1%;
+    .gallery-list {
+        margin-bottom: 4em;
+        margin-top: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
     }
 
-    ul.sectionlist {
-        width: 45%;
-        margin: 0;
-        padding: 0;
-        float: left;
-        list-style-type: none;
-        text-align: center;
+    .gallery-item {
+        width: 50%;
+        margin-bottom: 2em;
+        padding: 0 1em;
+        position: relative;
     }
 
-    #runway {
-        margin: 0 10% 0 0;
+    .gallery-item img {
+        width: 100%;
+        box-shadow: 0px 1px 5px 0px #4a4a4a;
     }
 
 
@@ -560,8 +564,8 @@ label, input {
 
 
     /* GALLERY SECTION */
-    #subthree {
-    	padding-top: 100px;
+    article.galleries {
+        margin-top: 45px;
     }
 
     figure {
